--- a/Hotel/Views/Contact/Index.cshtml
+++ b/Hotel/Views/Contact/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model Hotel.Models.Contact;
 @{
     ViewData["Title"] = "Contact Us Page";
 }
@@ -11,31 +12,32 @@
     <h2 style="margin-top:200px;">WE ARE HERE FOR YOU</h2>
     <p>
         At Travellaire Hotels, we take our customers seriously. Do you have any compliment, opinion, enquiries, compaints or requests,
-        please forward it to our support desk and we will get back to you as soon as possible.</p>
+        please forward it to our support desk and we will get back to you as soon as possible.
+    </p>
 </section>
 <section style="height:100px;">
 </section>
 <section class="contactForm m-5 px-5 ">
-    <form class="m-5">
+    <form class="m-5" asp-action="Index" method="post">
+        <input asp-for="userId" value="@ViewBag.userId" type="hidden" />
         <div class="mb-3">
             <label for="type" class="form-label">Type</label>
-            <select class="form-control" id="Email">
-                <option>Compliment</option>
-                <option>Opinion</option>
-                <option>Enquiries</option>
-                <option>Compaints</option>
-                <option>Requests</option>
+            <select asp-for="type" class="form-control" id="Email">
+                <option value="Compliment">Compliment</option>
+                <option value="Opinion">Opinion</option>
+                <option value="Enquiries">Enquiries</option>
+                <option value="Compaints">Compaints</option>
+                <option value="Requests">Requests</option>
             </select>
         </div>
         <div class="mb-3">
             <label for="Message" class="form-label">Message</label>
-            <textarea class="form-control" id="Message" style="height: 150px"></textarea>
+            <textarea asp-for=message class="form-control" id="Message" style="height: 150px"></textarea>
         </div>
-        <a asp-controller="Home" asp-action="Index" class="btn float-end mb-5">Send It now</a>
+        <input asp-controller="Contact" asp-action="Index" type="submit" class="btn float-end mb-5" value="Send It now">
     </form>
 </section>
 <section style="height:100px;">
 </section>
 <section class="map">
-
 </section>
