--- a/Hotel/Views/Room/Details.cshtml
+++ b/Hotel/Views/Room/Details.cshtml
@@ -3,52 +3,31 @@
 @{
     ViewData["Title"] = "Details";
 }
+<section class="section6 text-center">
+    <h1>Room Details</h1>
+</section>
 
-<h1>Details</h1>
 
-<div>
-    <h4>Room</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.roomName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.roomName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.roomType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.roomType)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.priceParNight)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.priceParNight)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.availiablilty)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.availiablilty)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.numberOfBookingTimes)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.numberOfBookingTimes)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.room_Pic)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.room_Pic)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<section class="roomSection mx-5 text-center">
+    <div class="card mx-5" style="width: 90%;">
+        <div class="card-body">
+            <h5 class="card-title">
+                @Html.DisplayFor(model => model.roomName)
+            </h5>
+            @{
+                if (Model.availiablilty)
+                {
+                    <p class="card-text text-end">Available: Yes</p>
+                }
+                else
+                {
+                    <p class="card-text text-end">Available: No</p>
+                }
+            }
+            <p class="card-text text-end">₦@Html.DisplayFor(model => model.priceParNight)</p>
+        </div>
+        <img src="~/img/@Model.room_Pic" class="card-img-top" alt="...">
+        <a asp-controller="Book" asp-action="Index" asp-route-id="@Model.ID" class="btn btn-outline-warning float-end">Book now</a>
+
+    </div>
+</section>
