--- a/Hotel/Views/Shared/_Layout.cshtml
+++ b/Hotel/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="hotelName">
                     <p class="hotelNamep1">Travellaire</p>
                     <p class="hotelNamep2">HOtel</p>
-                </div>                      
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,11 +33,14 @@
                         <li class="nav-item me-3">
                             <a class="nav-link text-white" asp-area="" asp-controller="Room" asp-action="Index">Rooms</a>
                         </li>
-                        
-                        
+                        <li class="nav-item me-3">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Contact" asp-action="Index">Contact</a>
+                        </li>
+
+
                         @{
                             if (ViewData["session"] != null)
-                                        {
+                            {
                                 <li class="nav-item me-3">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Logout" asp-action="Index">Logout</a>
                                 </li>
@@ -55,18 +58,18 @@
                                 </li>
                             }
                         }
-                            
-                       
+
+
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    
-        <main role="main">
-            @RenderBody()
-        </main>
-  
+
+    <main role="main">
+        @RenderBody()
+    </main>
+
 
     <footer class="footer text-muted">
         <div class="container">
@@ -90,7 +93,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                     <ul class="list2">
+                    <ul class="list2">
                         <li class="mt-3"><a href=""><img src="~/img/Path 38@2x.png" /> Facebook</a></li>
                         <li class="mt-3"><a href=""><img src="~/img/Path 39.png" /> Twitter</a></li>
                         <li class="mt-3"><a href=""><img src="~/img/Path 40.png" /> Instagram</a></li>
